--- a/src/html/partials/sections/our_reviews.html
+++ b/src/html/partials/sections/our_reviews.html
@@ -2,7 +2,7 @@
   <div class="our-reviews__container container">
     <span class="our-team__undertitle">Our reviews</span>
     <h2 class="our-team__title">What our Clients Says</h2>
-  
+
     <div class="our-reviews__slider-wrapper">
       <button class="our-reviews__next slider__btn" aria-label="next slide">
         <svg class="our-team__next-icon" width="16" height="16">
@@ -16,50 +16,6 @@
       </button>
       <div class="our-reviews__slider">
         <div class="our-reviews__slide">
-          <div>
-            <div class="our-reviews__stars-wrapper">
-              <i class="icon-star"></i>
-              <i class="icon-star"></i>
-              <i class="icon-star"></i>
-              <i class="icon-star"></i>
-              <i class="icon-star"></i>
-            </div>
-            <p class="our-reviews__text">
-              “Our members are so impressed. It's intuitive. It's clean. It's distraction free. If you're building a community.
-            </p>
-            <div class="our-reviews__info-wrapper">
-              <picture>
-                <source
-                  srcset="
-                    ./assets/images/our-reviews/sabo-masties.webp    1x,
-                    ./assets/images/our-reviews/sabo-masties@2x.webp 2x
-                  "
-                  type="image/webp"
-                />
-                <source
-                  srcset="
-                    ./assets/images/our-reviews/sabo-masties.png    1x,
-                    ./assets/images/our-reviews/sabo-masties@2x.png 2x
-                  "
-                  type="image/png"
-                />
-                <img
-                  width="50"
-                  height="50"
-                  class="our-reviews__img"
-                  src="./assets/images/our-reviews/sabo-masties.png"
-                  alt="Sabo Masties"
-                  loading="lazy"
-                />
-              </picture>
-              <div class="our-reviews__text-block">
-                <p class="our-reviews__name">Sabo Masties</p>
-                <p class="our-reviews__mail">Founder @ Rolex</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="our-reviews__slide">
           <div class="our-reviews__stars-wrapper">
             <i class="icon-star"></i>
             <i class="icon-star"></i>
@@ -68,91 +24,8 @@
             <i class="icon-star"></i>
           </div>
           <p class="our-reviews__text">
-            “Our members are so impressed. It's intuitive. It's clean. It's distraction free. If you're building a community.
-          </p>
-          <div class="our-reviews__info-wrapper">
-            <picture>
-              <source
-                srcset="
-                  ./assets/images/our-reviews/musharof.webp    1x,
-                  ./assets/images/our-reviews/musharof@2x.webp 2x
-                "
-                type="image/webp"
-              />
-              <source
-                srcset="
-                  ./assets/images/our-reviews/musharof.png    1x,
-                  ./assets/images/our-reviews/musharof@2x.png 2x
-                "
-                type="image/png"
-              />
-              <img
-                width="50"
-                height="50"
-                class="our-reviews__img"
-                src="./assets/images/our-reviews/musharof.png"
-                alt="Musharof Chowdhury"
-                loading="lazy"
-              />
-            </picture>
-            <div class="our-reviews__text-block">
-              <p class="our-reviews__name">Musharof Chowdhury</p>
-              <p class="our-reviews__mail">Founder @ Ayro UI</p>
-            </div>
-          </div>
-        </div>
-        <div class="our-reviews__slide">
-          <div class="our-reviews__stars-wrapper">
-            <i class="icon-star"></i>
-            <i class="icon-star"></i>
-            <i class="icon-star"></i>
-            <i class="icon-star"></i>
-            <i class="icon-star"></i>
-          </div>
-          <p class="our-reviews__text">
-            “Our members are so impressed. It's intuitive. It's clean. It's distraction free. If you're building a community.
-          </p>
-          <div class="our-reviews__info-wrapper">
-            <picture>
-              <source
-                srcset="
-                  ./assets/images/our-reviews/william.webp    1x,
-                  ./assets/images/our-reviews/william@2x.webp 2x
-                "
-                type="image/webp"
-              />
-              <source
-                srcset="
-                  ./assets/images/our-reviews/william.png    1x,
-                  ./assets/images/our-reviews/william@2x.png 2x
-                "
-                type="image/png"
-              />
-              <img
-                width="50"
-                height="50"
-                class="our-reviews__img"
-                src="./assets/images/our-reviews/william.png"
-                alt="Musharof Chowdhury"
-                loading="lazy"
-              />
-            </picture>
-            <div class="our-reviews__text-block">
-              <p class="our-reviews__name">William Smith</p>
-              <p class="our-reviews__mail">Founder @ Trorex</p>
-            </div>
-          </div>
-        </div>
-        <div class="our-reviews__slide">
-          <div class="our-reviews__stars-wrapper">
-            <i class="icon-star"></i>
-            <i class="icon-star"></i>
-            <i class="icon-star"></i>
-            <i class="icon-star"></i>
-            <i class="icon-star"></i>
-          </div>
-          <p class="our-reviews__text">
-            “Our members are so impressed. It's intuitive. It's clean. It's distraction free. If you're building a community.
+            "Thanks for the great service. Really good.It's is the coolest, very professional
+            clinic!"
           </p>
           <div class="our-reviews__info-wrapper">
             <picture>
@@ -181,7 +54,7 @@
             </picture>
             <div class="our-reviews__text-block">
               <p class="our-reviews__name">Sabo Masties</p>
-              <p class="our-reviews__mail">Founder @ Rolex</p>
+              <p class="our-reviews__mail">Medical Assistant</p>
             </div>
           </div>
         </div>
@@ -194,7 +67,8 @@
             <i class="icon-star"></i>
           </div>
           <p class="our-reviews__text">
-            “Our members are so impressed. It's intuitive. It's clean. It's distraction free. If you're building a community.
+            "I love your system. Thank you for making it painless, pleasant and most of all hassle
+            free!"
           </p>
           <div class="our-reviews__info-wrapper">
             <picture>
@@ -223,7 +97,7 @@
             </picture>
             <div class="our-reviews__text-block">
               <p class="our-reviews__name">Musharof Chowdhury</p>
-              <p class="our-reviews__mail">Founder @ Ayro UI</p>
+              <p class="our-reviews__mail">Dog Trainer</p>
             </div>
           </div>
         </div>
@@ -236,7 +110,8 @@
             <i class="icon-star"></i>
           </div>
           <p class="our-reviews__text">
-            “Our members are so impressed. It's intuitive. It's clean. It's distraction free. If you're building a community.
+            "I wish I would have thought of it first. Your company is truly upstanding and is behind
+            its product 100%."
           </p>
           <div class="our-reviews__info-wrapper">
             <picture>
@@ -265,7 +140,136 @@
             </picture>
             <div class="our-reviews__text-block">
               <p class="our-reviews__name">William Smith</p>
-              <p class="our-reviews__mail">Founder @ Trorex</p>
+              <p class="our-reviews__mail">Nursing Assistant</p>
+            </div>
+          </div>
+        </div>
+        <div class="our-reviews__slide">
+          <div class="our-reviews__stars-wrapper">
+            <i class="icon-star"></i>
+            <i class="icon-star"></i>
+            <i class="icon-star"></i>
+            <i class="icon-star"></i>
+            <i class="icon-star"></i>
+          </div>
+          <p class="our-reviews__text">
+            "I can't say enough about it. Thanks for the great service. It's the perfect solution
+            for our family!"
+          </p>
+          <div class="our-reviews__info-wrapper">
+            <picture>
+              <source
+                srcset="
+                  ./assets/images/our-reviews/jane-cooper.webp    1x,
+                  ./assets/images/our-reviews/jane-cooper@2x.webp 2x
+                "
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./assets/images/our-reviews/jane-cooper.png    1x,
+                  ./assets/images/our-reviews/jane-cooper@2x.png 2x
+                "
+                type="image/png"
+              />
+              <img
+                width="50"
+                height="50"
+                class="our-reviews__img"
+                src="./assets/images/our-reviews/jane-cooper.png"
+                alt="Jane Cooper"
+                loading="lazy"
+              />
+            </picture>
+            <div class="our-reviews__text-block">
+              <p class="our-reviews__name">Jane Cooper</p>
+              <p class="our-reviews__mail">Web Designer</p>
+            </div>
+          </div>
+        </div>
+        <div class="our-reviews__slide">
+          <div class="our-reviews__stars-wrapper">
+            <i class="icon-star"></i>
+            <i class="icon-star"></i>
+            <i class="icon-star"></i>
+            <i class="icon-star"></i>
+            <i class="icon-star"></i>
+          </div>
+          <p class="our-reviews__text">
+            "Thank you so much for your help. Emergency and professional help. My big
+            recommendation!"
+          </p>
+          <div class="our-reviews__info-wrapper">
+            <picture>
+              <source
+                srcset="
+                  ./assets/images/our-reviews/jenny-wilson.webp    1x,
+                  ./assets/images/our-reviews/jenny-wilson@2x.webp 2x
+                "
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./assets/images/our-reviews/jenny-wilson.png    1x,
+                  ./assets/images/our-reviews/jenny-wilson@2x.png 2x
+                "
+                type="image/png"
+              />
+              <img
+                width="50"
+                height="50"
+                class="our-reviews__img"
+                src="./assets/images/our-reviews/jenny-wilson.png"
+                alt="Jenny Wilson"
+                loading="lazy"
+              />
+            </picture>
+            <div class="our-reviews__text-block">
+              <p class="our-reviews__name">Jenny Wilson</p>
+              <p class="our-reviews__mail">Marketing Coordinator</p>
+            </div>
+          </div>
+        </div>
+        <div class="our-reviews__slide">
+          <div class="our-reviews__stars-wrapper">
+            <i class="icon-star"></i>
+            <i class="icon-star"></i>
+            <i class="icon-star"></i>
+            <i class="icon-star"></i>
+            <i class="icon-star"></i>
+          </div>
+          <p class="our-reviews__text">
+            "I am really satisfied with Smile Dent! Amazing clinic! My smile gets a lot of
+            compliments!"
+          </p>
+          <div class="our-reviews__info-wrapper">
+            <picture>
+              <source
+                srcset="
+                  ./assets/images/our-reviews/cody-fisher.webp    1x,
+                  ./assets/images/our-reviews/cody-fisher@2x.webp 2x
+                "
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./assets/images/our-reviews/cody-fisher.png    1x,
+                  ./assets/images/our-reviews/cody-fisher@2x.png 2x
+                "
+                type="image/png"
+              />
+              <img
+                width="50"
+                height="50"
+                class="our-reviews__img"
+                src="./assets/images/our-reviews/cody-fisher.png"
+                alt="Cody Fisher"
+                loading="lazy"
+              />
+            </picture>
+            <div class="our-reviews__text-block">
+              <p class="our-reviews__name">Cody Fisher</p>
+              <p class="our-reviews__mail">President of Sales</p>
             </div>
           </div>
         </div>
