--- a/src/assets/scss/sections/_our_reviews.scss
+++ b/src/assets/scss/sections/_our_reviews.scss
@@ -1,115 +1,122 @@
 .our-reviews {
+  .slick-track {
+    margin-left: 24px;
+    padding-left: 22px;
+    padding-bottom: 24px;
 
-    .slick-track {
-        margin-left: 24px;
-        padding-left: 22px;
-        padding-bottom: 24px;
-
-        @include mq(tablet) {
-            padding-bottom: 32px;
-        }
-
-        @include mq(desktop) {
-            padding-bottom: 40px;
-        }
+    @include mq(tablet) {
+      padding-bottom: 32px;
     }
 
-    &__container {
-        text-align: center;
+    @include mq(desktop) {
+      padding-bottom: 40px;
+    }
+  }
+
+  &__container {
+    text-align: center;
+  }
+
+  &__prev,
+  &__next {
+    top: 102px;
+  }
+
+  &__next {
+    right: 0;
+  }
+
+  &__slider-wrapper {
+    position: relative;
+  }
+
+  &__slider {
+    margin-top: 24px;
+
+    @include mq(tablet) {
+      margin-top: 40px;
     }
 
-    &__prev,
-    &__next {
-        top: 102px;
+    @include mq(desktop) {
+      margin-top: 60px;
+    }
+  }
+
+  &__slide {
+    width: 232px;
+    height: 250px;
+    display: flex !important;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 24px 22px 24px 24px;
+    background-color: var(--accent-txt-cl);
+    border-radius: 20px;
+    text-align: left;
+    box-shadow: var(--main-shadow);
+    margin-left: 26px;
+
+    @include mq(tablet) {
+      display: flex !important;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 316px;
+      height: 281px;
+      padding: 24px 22px 24px 32px;
+      margin-left: 32px;
     }
 
-    &__next {
-        right: 0;
+    @include mq(desktop) {
+      width: 364px;
+      margin-left: 42px;
     }
+  }
 
-    &__slider-wrapper {
-        position: relative;
+  &__stars-wrapper {
+    margin-bottom: 16px;
+
+    @include mq(tablet) {
+      margin-bottom: 20px;
     }
+  }
 
-    &__slider {
-        margin-top: 24px;
+  &__text {
+    font-size: 12px;
+    line-height: calc(25 / 12);
+    color: var(--secondary-txt-cl);
 
-        @include mq(tablet) {
-            margin-top: 40px;
-        }
-
-        @include mq(desktop) {
-            margin-top: 60px;
-        }
+    @include mq(tablet) {
+      font-size: 14px;
+      line-height: calc(30 / 14);
     }
+  }
 
-    &__slide {
-        width: 232px;
-        padding: 24px 22px 24px 24px;
-        background-color: var(--accent-txt-cl);
-        border-radius: 20px;
-        text-align: left;
-        box-shadow: var(--main-shadow);
-        margin-left: 26px;
+  &__info-wrapper {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
 
-        @include mq(tablet) {
-            width: 316px;
-            padding: 24px 22px 24px 32px;
-            margin-left: 32px;
-        }
-
-        @include mq(desktop) {
-            width: 364px;
-            margin-left: 42px;
-        }
+    @include mq(tablet) {
+      margin-top: 20px;
     }
+  }
 
-    &__stars-wrapper {
-        margin-bottom: 16px;
+  &__text-block {
+    margin-left: 16px;
+  }
 
-        @include mq(tablet) {
-            margin-bottom: 20px;
-        }
-    }
+  &__name {
+    font-weight: 600;
+    line-height: calc(17 / 14);
+  }
 
-    &__text {
-        font-size: 12px;
-        line-height: calc(25 / 12);
-        color: var(--secondary-txt-cl);
+  &__mail {
+    font-size: 12px;
+    color: var(--secondary-txt-cl);
+    margin-top: 5px;
+  }
 
-        @include mq(tablet) {
-            font-size: 14px;
-            line-height: calc(30 / 14);
-        }
-    }
-
-    &__info-wrapper {
-        display: flex;
-        align-items: center;
-        margin-top: 10px;
-
-        @include mq(tablet) {
-            margin-top: 20px;
-        }
-    }
-
-    &__text-block {
-        margin-left: 16px;
-    }
-
-    &__name {
-        font-weight: 600;
-        line-height: calc(17 / 14);
-    }
-
-    &__mail {
-        font-size: 12px;
-        color: var(--secondary-txt-cl);
-        margin-top: 5px;
-    }
-
-    .icon-star {
-        font-size: 20px;
-        color: var(--normal-bg);
-    }
+  .icon-star {
+    font-size: 20px;
+    color: var(--normal-bg);
+  }
 }
