--- a/src/html/partials/sections/hero.html
+++ b/src/html/partials/sections/hero.html
@@ -21,7 +21,7 @@
             </div>
             <div class="hero__info-wrapper">
               <p class="hero__label">Phone Number</p>
-              <a href="tel:+442074071668" class="hero__contacts-title">+44 20 7407 1668</a>
+              <span class="hero__contacts-title">+44 20 7407 1668</span>
             </div>
           </li>
           <li class="hero__item">
