--- a/src/html/partials/sections/our_team.html
+++ b/src/html/partials/sections/our_team.html
@@ -1,4 +1,4 @@
-<section class="section our-team" id="team">
+<section class="section our-team" id="our-team">
   <div class="container our-team__container">
     <span class="our-team__undertitle">Our Team</span>
     <h2 class="our-team__title">Our Awesome Team</h2>
