--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -18,6 +18,7 @@
 @import './components/slick-dots';
 @import './components/popup-modal';
 @import './components/popup-social';
+@import './components/popup-sent';
 
 @import './layouts/header';
 
@@ -27,7 +28,6 @@
 @import './sections/our_service';
 @import './sections/our_team';
 @import './sections/our_reviews';
-@import './sections/booking';
 @import './sections/contacts';
 
 @import './layouts/footer';
