--- a/src/html/partials/layout.html
+++ b/src/html/partials/layout.html
@@ -6,12 +6,10 @@
   </head>
   <body>
     <div class="page">{% block content %} {% endblock %}</div>
-    {% include 'components/modal.html' %}
+    {% include 'components/modal.html' %} {% include 'components/popup-sent.html' %}
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script
-      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
-    ></script>
+    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="assets/js/app.js"></script>
   </body>
 </html>
