--- a/src/html/partials/sections/contacts.html
+++ b/src/html/partials/sections/contacts.html
@@ -1,6 +1,9 @@
 <section class="contacts" id="contacts">
   <div class="container contacts__container">
     <div class="contacts__map"></div>
+    <div class="container booking__container">
+      <div class="booking__form">{% include 'components/form.html' %}</div>
+    </div>
     <span class="contacts__before-title">Contacts</span>
     <h2 class="contacts__title">Contact Us</h2>
     <ul class="contacts__list">
