--- a/src/html/partials/sections/hero.html
+++ b/src/html/partials/sections/hero.html
@@ -10,7 +10,7 @@
         <p class="hero__title-text">
           Helping you to truly express yourself and your smile with the help of our professionals
         </p>
-        <button class="hero__btn btn">Book now</button>
+        <button class="hero__btn btn" data-book>Book now</button>
 
         <ul class="hero__list">
           <li class="hero__item">
@@ -97,7 +97,7 @@
       <p class="hero__text">
         Helping you to truly express yourself and your smile with the help of our professionals
       </p>
-      <button class="hero__mob-btn btn">Book now</button>
+      <button class="hero__mob-btn btn" data-book>Book now</button>
     </div>
   </div>
 </section>
