--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -13,6 +13,9 @@
   --footer-bg: #e1f5ff;
   --backdrop-bg: rgba(235, 248, 255, 0.8);
 
+  /* BORDER */
+  --border-form: #f1f1f1;
+
   /* SHADOW */
 
   --main-shadow: 0px 4px 4px rgba(187, 187, 187, 0.25);
