--- a/src/html/partials/components/mobile-menu.html
+++ b/src/html/partials/components/mobile-menu.html
@@ -4,13 +4,13 @@
       <div class="nav__mobile">
         <ul class="nav__mobile-list">
           <li class="nav__mobile-item">
-            <a href="#home" class="nav__mobile-link">Home</a>
+            <a href="#" class="nav__mobile-link">Home</a>
           </li>
           <li class="nav__mobile-item">
             <a href="#about-us" class="nav__mobile-link">About us</a>
           </li>
           <li class="nav__mobile-item">
-            <a href="#our-services" class="nav__mobile-link">Our services</a>
+            <a href="#services" class="nav__mobile-link">Our services</a>
           </li>
           <li class="nav__mobile-item">
             <a href="#our-team" class="nav__mobile-link">Our Team</a>
@@ -22,7 +22,7 @@
             <a href="#contacts" class="nav__mobile-link">Contacts</a>
           </li>
         </ul>
-        <button class="nav__mobile-btn btn">Contact us</button>
+        <button class="nav__mobile-btn btn" data-book>Contact us</button>
         <ul class="nav__mobile-contacts-list">
           <li class="nav__mobile-contacts-item">
             <div class="nav__mobile-icon-wrapper">
