--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -21,7 +21,7 @@
             <a class="footer-navigation__link" href="#services">Our services</a>
           </li>
           <li class="footer-navigation__item">
-            <a class="footer-navigation__link" href="#team">Our Team</a>
+            <a class="footer-navigation__link" href="#our-team">Our Team</a>
           </li>
           <li class="footer-navigation__item">
             <a class="footer-navigation__link" href="#reviews">Reviews</a>
