--- a/src/assets/scss/components/_nav-menu.scss
+++ b/src/assets/scss/components/_nav-menu.scss
@@ -21,6 +21,25 @@
   .nav-list__item {
     font-size: 16px;
     font-weight: 600;
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      border-radius: 15px;
+      bottom: -5px;
+      left: 0;
+      background-color: var(--hover-bg);
+      transform-origin: bottom left;
+      transition: all var(--transition-timing-function) 300ms;
+  
+      transform: scaleX(0);
+    }
+    &:hover::after {
+      transform: scaleX(1);
+    }
   }
 
   .nav-list__item:not(:first-child) {
