fix input enter

--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -60,6 +60,7 @@
     font-size: 12px;
     font-weight: 500;
     line-height: calc(20 / 12);
+    padding-top: 33px;
   }
 
   &__input:focus ~ .form__label,
