--- a/src/html/partials/components/mobile-menu.html
+++ b/src/html/partials/components/mobile-menu.html
@@ -32,7 +32,7 @@
             </div>
             <div class="nav__mobile-number-wrapper">
               <p class="nav__mobile-label">Phone Number</p>
-              <a href="tel:+442074071668" class="nav__mobile-contacts-title">+44 20 7407 1668</a>
+              <span class="nav__mobile-contacts-title">+44 20 7407 1668</span>
             </div>
           </li>
           <li class="nav__mobile-contacts-item">
