SD:28-add-smooth-scroll
add-smooth-scroll, add counter run section, fix clear form close, fix label form

--- a/src/html/partials/components/form.html
+++ b/src/html/partials/components/form.html
@@ -25,7 +25,7 @@
           placeholder=" "
           data-reg="^[^!#$%&'*+/=?^_{|}~]+@[^\s@]+\.[a-zA-Z]{2,4}$"
         />
-        <label class="form__label form__label--email" for="email">Email*</label>
+        <label class="form__label form__label--email" for="email-book">Email*</label>
         <p class="form__error">Email is required</p>
       </div>
       <div class="form__line">
