--- a/src/html/partials/sections/about_info.html
+++ b/src/html/partials/sections/about_info.html
@@ -1,4 +1,4 @@
-<section class="about-info">
+<section class="about-info" id="about-info">
   <div class="container">
     <ul class="about-info__list">
       <li class="about-info__list-item">
