SD:30-add-meta-tags
add-meta-tags content

--- a/src/html/partials/head.html
+++ b/src/html/partials/head.html
@@ -4,7 +4,10 @@
 <meta name="robots" content="index, follow" />
 <meta name="google" content="notranslate" />
 <meta name="format-detection" content="telephone=no" />
-<meta name="description" content="" />
+<meta
+  name="description"
+  content="smile, Dent, tooth, forceps, implant, braces-rubber-bands, cavity"
+/>
 <meta name="msapplication-TileColor" content="#1fa6b4" />
 <meta name="theme-color" content="#ffffff" />
 <title>{{ title }}</title>
