--- a/src/html/partials/components/mobile-menu.html
+++ b/src/html/partials/components/mobile-menu.html
@@ -32,7 +32,7 @@
             </div>
             <div class="nav__mobile-number-wrapper">
               <p class="nav__mobile-label">Phone Number</p>
-              <span class="nav__mobile-contacts-title">+44 20 7407 1668</span>
+              <p class="nav__mobile-contacts-title">+44 20 7407 1668</p>
             </div>
           </li>
           <li class="nav__mobile-contacts-item">
@@ -43,7 +43,7 @@
             </div>
             <div class="nav__mobile-address-wrapper">
               <p class="nav__mobile-label">London</p>
-              <p class="nav__mobile-address-contacts-title">401 Broadway</p>
+              <p class="nav__mobile-contacts-title">401 Broadway</p>
             </div>
           </li>
         </ul>
