--- a/src/assets/scss/components/_mobile-menu.scss
+++ b/src/assets/scss/components/_mobile-menu.scss
@@ -131,10 +131,13 @@
   .nav__mobile-label {
     font-size: 12px;
     font-weight: 600;
+    color: var(--primary-txt-cl);
   }
 
   .nav__mobile-contacts-title {
     font-size: 12px;
     margin-top: 4px;
+    font-weight: 500;
+    color: var(--secondary-txt-cl);
   }
 }
