--- a/src/assets/scss/sections/_hero.scss
+++ b/src/assets/scss/sections/_hero.scss
@@ -74,12 +74,14 @@
 
 .hero__schedule-label,
 .hero__schedule-title {
+  font-weight: 500;
   font-size: 12px;
   line-height: calc(12 / 10);
 
   @include mq(tablet) {
     font-size: 14px;
     line-height: calc(24 / 14);
+    width: 167px;
   }
 }
 
