SD:31-bug-report-button
fix bug report id 3,4,5,6,7,8 ,11

--- a/src/assets/scss/sections/_contacts.scss
+++ b/src/assets/scss/sections/_contacts.scss
@@ -108,6 +108,39 @@
         margin-bottom: 24px;
       }
     }
+    .button-navigator {
+      svg {
+        fill: var(--normal-bg);
+      }
+      &:hover,
+      &:focus {
+        background-color: var(--hover-bg);
+        svg {
+          fill: var(--hover-bg);
+        }
+      }
+      &:active {
+        background-color: var(--active-bg);
+        svg {
+          fill: var(--active-bg);
+        }
+      }
+    }
+    button {
+      &:hover,
+      &:focus {
+        background-color: var(--hover-bg);
+        svg {
+          stroke: var(--hover-bg);
+        }
+      }
+      &:active {
+        background-color: var(--active-bg);
+        svg {
+          stroke: var(--active-bg);
+        }
+      }
+    }
   }
 
   &__box-icon {
