--- a/src/html/partials/components/mobile-menu.html
+++ b/src/html/partials/components/mobile-menu.html
@@ -22,7 +22,9 @@
             <a href="#contacts" class="nav__mobile-link">Contacts</a>
           </li>
         </ul>
-        <button class="nav__mobile-btn btn" data-book>Contact us</button>
+        <button type="button" aria-label="contact us" class="nav__mobile-btn btn" data-book>
+          Contact us
+        </button>
         <ul class="nav__mobile-contacts-list">
           <li class="nav__mobile-contacts-item">
             <div class="nav__mobile-icon-wrapper">
