--- a/src/html/partials/components/popup-sent.html
+++ b/src/html/partials/components/popup-sent.html
@@ -1,7 +1,7 @@
 <div class="backdrop popup-sent is-hidden" id="sent-modal">
   <div class="popup-sent__wrapper modal-sent">
-    <button id="close-sent-btn" type="button" class="popup-sent__position-btn">
-      <svg class="popup-sent__svg-close" aria-label="close">
+    <button id="close-sent-btn" type="button" class="popup-sent__position-btn" aria-label="close">
+      <svg class="popup-sent__svg-close">
         <use xlink:href="./assets/images/sprite.svg#icon-close"></use>
       </svg>
     </button>
