--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -86,6 +86,7 @@
                 name="email"
                 class="footer__form-input"
                 placeholder="Enter your email address"
+                maxlength="63"
               />
               <button type="submit" class="footer-btn" aria-label="Submit button">
                 <svg class="footer__svg-email" aria-label="email">
