--- a/src/html/partials/sections/contacts.html
+++ b/src/html/partials/sections/contacts.html
@@ -8,44 +8,44 @@
     <h2 class="contacts__title">Contact Us</h2>
     <ul class="contacts__list">
       <li class="contacts__item" data-social>
-        <div class="contacts__box-icon">
-          <svg class="contacts__svg-icon" aria-label="Phone">
+        <button type="button" class="contacts__box-icon" aria-label="Phone">
+          <svg class="contacts__svg-icon">
             <use xlink:href="./assets/images/sprite.svg#icon-phone"></use>
           </svg>
-        </div>
+        </button>
         <div class="contacts__block-wrapper">
           <span class="contacts__span">Phone Number</span>
           <span class="contacts__subtitle">+44 20 7407 1668</span>
         </div>
       </li>
       <li class="contacts__item" data-social>
-        <div class="contacts__box-icon">
-          <svg class="contacts__svg-email" aria-label="Email">
+        <button type="button" class="contacts__box-icon" aria-label="Email">
+          <svg class="contacts__svg-email">
             <use xlink:href="./assets/images/sprite.svg#icon-email"></use>
           </svg>
-        </div>
+        </button>
         <div class="contacts__block-wrapper">
           <span class="contacts__span">Email</span>
           <span class="contacts__subtitle">info@yourdomain.com</span>
         </div>
       </li>
       <li class="contacts__item" data-social>
-        <div class="contacts__box-icon">
-          <svg class="contacts__svg-icon" aria-label="Navigator">
+        <button type="button" class="contacts__box-icon button-navigator" aria-label="Navigator">
+          <svg class="contacts__svg-icon">
             <use xlink:href="./assets/images/sprite.svg#icon-navigate2"></use>
           </svg>
-        </div>
+        </button>
         <div class="contacts__block-wrapper">
           <span class="contacts__span">London</span>
           <span class="contacts__subtitle">401 Broadway</span>
         </div>
       </li>
       <li class="contacts__item" data-social>
-        <div class="contacts__box-icon">
-          <svg class="contacts__svg-time" aria-label="Opening Hours">
+        <button type="button" class="contacts__box-icon" aria-label="Opening Hours">
+          <svg class="contacts__svg-time">
             <use xlink:href="./assets/images/sprite.svg#icon-time"></use>
           </svg>
-        </div>
+        </button>
         <div class="contacts__block-wrapper">
           <span class="contacts__span">Opening Hours</span>
           <span class="contacts__subtitle">Mon-Sun: 9 a.m.- 8 p.m.</span>
