--- a/src/html/partials/components/popup-modal.html
+++ b/src/html/partials/components/popup-modal.html
@@ -1,7 +1,7 @@
 <div class="backdrop popup-modal is-hidden" id="success-modal">
   <div class="popup-modal__wrapper modal-content">
-    <button id="close-btn" type="button" class="popup-modal__position-btn">
-      <svg class="popup-modal__svg-close" aria-label="close">
+    <button id="close-btn" type="button" class="popup-modal__position-btn" aria-label="close">
+      <svg class="popup-modal__svg-close">
         <use xlink:href="./assets/images/sprite.svg#icon-close"></use>
       </svg>
     </button>
