--- a/src/html/partials/components/popup-social.html
+++ b/src/html/partials/components/popup-social.html
@@ -1,7 +1,7 @@
 <div class="backdrop popup-social is-hidden" id="social-modal">
   <div class="popup-social__wrapper modal-social-content">
-    <button id="close-social-btn" type="button" class="popup-social__position-btn">
-      <svg class="popup-social__svg-close" aria-label="close">
+    <button id="close-social-btn" type="button" class="popup-social__position-btn" aria-label="close">
+      <svg class="popup-social__svg-close">
         <use xlink:href="./assets/images/sprite.svg#icon-close"></use>
       </svg>
     </button>
