--- a/src/html/partials/sections/our_service.html
+++ b/src/html/partials/sections/our_service.html
@@ -111,6 +111,6 @@
         </div>
       </div>
     </div>
-    <button class="btn our-service__btn" data-book>Book now</button>
+    <button class="btn our-service__btn" data-book aria-label="Book now">Book now</button>
   </div>
 </section>
